# TransferAttack

./: .gitignore  .gitmodules  main.py  pyproject.toml
evaluation/: paper_harmful_asr.py
scripts/: construct_paper_harmful_benchmarks.py  download_paper_harmful_benchmarks.py  prepare_generation_from_search.py  run_gjo_mistral_v03_to_llama31.sh  run_gjo_paper_harmful_benchmarks.sh  run_paper_harmful_suite.py  run_timestamped.sh  utils.py
scripts/configs/: transfer_mistral_v03_to_llama31.py
