[project]
name = "transferattack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aisafetylab",
    "fschat",
    "numpy>=1.26.4",
    "openai>=1.0.0",
    "tokenizers>=0.13.3",
    "torch==2.5.1",
    "transformers>=4.34.0",
    "vllm",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu118" }]
vllm = { url = "https://fastgit.cc/https://github.com/vllm-project/vllm/releases/download/v0.7.3/vllm-0.7.3+cu118-cp38-abi3-manylinux1_x86_64.whl" }
aisafetylab = { path = "3rdparty/AISafetyLab", editable = true }
fschat = { path = "3rdparty/FastChat", editable = true }

[[tool.uv.index]]
name = "aliyun-mirrors"
url = "https://mirrors.aliyun.com/pypi/web/simple"

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://mirrors.aliyun.com/pytorch-wheels/cu118"
format = "flat"
explicit = true

[tool.black]
target-version = ["py310"]
skip-string-normalization = false
exclude = '''
.git/
|.venv/
'''
